<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_all_schedules"
            android:icon="@drawable/ic_calendar_today"
            android:title="@string/all_schedules" />
    </group>
    
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu> 